fix spacing for the combobox

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -1,6 +1,6 @@
 @import "../../../root.scss";
 .formField{
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 .ohriFormLabel {
@@ -26,7 +26,7 @@
 
 .dropDownOverride{
     width: auto;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 
 .dropDownOverride > div > div{
